# WritingUtils

./: .gitignore  CLAUDE.md  GEMINI.md  MEMORY.md  README.md  push.sh  pyproject.toml  resume_session.sh  setup.sh
docs/: clean-docx.md
src/writing_utils/: __init__.py  _util.py  clean_docx.py  clean_markdown.py
tests/: 2026-03-10-231523-this-session-is-being-continued-from-a-previous-co.txt  Reduce Prompts  output_sample.md  test_sample.md  text.yaml
